# Customer-Feedback-Intelligence-System

./: .gitignore  README.md  packages.txt  pyproject.toml
1_customer-feedback-intelligence-system/: README.md
1_customer-feedback-intelligence-system/services/: sentiment_service.py  topic_service.py
2_brochure_generator/: app.py
3_youtube_chatbot/: README.md  app.py
3_youtube_chatbot/models/: transcript.py
3_youtube_chatbot/services/: chat_service.py  environment_service.py  prompt_service.py  youtube_transcript_service.py
3_youtube_chatbot/utils/: youtube_parser.py
customer-feedback-intelligence-system/: app.py  example.csv
customer-feedback-intelligence-system/services/: report_service.py
services/: keyword_service.py
utils/: data_loader.py
